manifests/Auth0Service.yaml
kind: Service
apiVersion: v1
metadata:
  name: auth0-service
spec:
  clusterIP: None
  ports:
    - port: 443
---
kind: Endpoints
apiVersion: v1
metadata:
  name: auth0-service
subsets:
  - addresses:
      - ip: 104.19.153.19
    ports:
      - port: 443
        name: https
