manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: content-service
  labels:
    app: cloudtunes-sps
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    cloud.google.com/backend-config: '{"default": "content-backend-config"}'
spec:
  internalTrafficPolicy: Cluster
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: content-pod
  type: ClusterIP
