manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloudtunes-sps-ingress
  labels:
    app: cloudtunes-sps
spec:
  ingressClassName: nginx
  rules:
    - host: dragonhusband.uwu
      http:
        paths:
          - path: /api/content
            pathType: Prefix
            backend:
              service:
                name: content-deployment
                port:
                  number: 8080
    - host: cloudtunes.uwu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-deployment
                port:
                  number: 3000
